# thehouse

./: .editorconfig  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  publish.yml  release.yml
thehouse/: __init__.py  thehouse.py
thehouse/characters/: character.py
thehouse/helpers/: __init__.py  print_pause.py  random_death.py  state.py  ui.py  validate_input.py  validate_text_input.py
thehouse/rooms/: bedroom.py  diningroom.py  hall.py  hallway.py  kitchen.py  livingroom.py  room.py  studio.py
