[project]
name = "thehouse"
version = "2.6.2"
description = "A text-based horror game"
authors = [
    {name = "Davide Di Criscito",email = "dcdavidev@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
classifiers = [
    "Topic :: Games/Entertainment"
]
dependencies = [
    "pyfiglet (>=1.0.4,<2.0.0)",
    "questionary (>=2.1.1,<3.0.0)",
    "rich (>=14.3.3,<15.0.0)"
]

[project.scripts]
thehouse = "thehouse:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "isort (>=7.0.0,<8.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "poethepoet (>=0.42.1,<0.43.0)",
    "commitizen (>=4.13.9,<5.0.0)"
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\\.(py)$'
exclude = '''
/(
        \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.poe.tasks]
play = "python -m thehouse"
release = "cz bump --changelog --yes"

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.6.1"
tag_format = "$version"
annotated_tag = true
version_files = [

    "pyproject.toml:version",
    "thehouse/__init__.py:__version__"
]
